logic fix update
